Collection API Улучшения[#170793]